# ap-server

./: .gitignore  Makefile  README.md  requests.txt
LM_PersonalInfoLeak/: Dockerfile
analysing_pii_leakage/: Dockerfile  Dockerfile_bk  hello.py
analysing_pii_leakage/src/: local_configs.py
docs/: dev_guide.md  user_guide.md
experiments/LM_PersonalInfoLeak/: requirements.txt
experiments/analysing_pii_leakage/: Dockerfile  hello.py  requirements.txt_test  setup.cfg
experiments/analysing_pii_leakage/configs/fine-tune/: echr-gpt2-small-undefended.yml
experiments/analysing_pii_leakage/src/pii_leakage/dataset/: real_dataset.py
experiments/test/: Dockerfile.arm64
server/: Dockerfile.server  README.md  config.py  configs.py  docker-compose.yml  docker_scripts.py  main.py  models.py  new.py  requirements.txt  requirements.txt.fullfreeze  run_request.json  server.py
server/static/: index.html  index.html.bk  logs.html  main.js
test/: Dockerfile  Dockerfile.arm64
